--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ parso==0.8.4
 pexpect==4.9.0
 pillow==11.1.0
 platformdirs==4.3.7
+polars==1.26.0
 prompt_toolkit==3.0.50
 protobuf==5.29.0
 psutil==7.0.0
@@ -48,6 +49,7 @@ pytz==2025.1
 pyzmq==26.3.0
 redis==5.2.1
 requests==2.32.3
+scipy==1.15.2
 setuptools==69.0.0
 six==1.17.0
 stack-data==0.6.3
@@ -58,4 +60,3 @@ urllib3==2.3.0
 utcxchangelib==0.1.1
 wcwidth==0.2.13
 Werkzeug==3.1.3
-polars==1.26.0
